# cmakeSoundTouch

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/kw/learn/soun/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/kw/learn/soun/: MainActivity.java  RecordActivity.java
app/src/main/res/menu/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/kw/learn/soun/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
soundtouch/: build.gradle
soundtouch/src/androidTest/java/kw/learn/soundtouch/: ExampleInstrumentedTest.java
soundtouch/src/main/: AndroidManifest.xml
soundtouch/src/main/cpp/: CMakeLists.txt  soundtouch-jni.cpp
soundtouch/src/main/java/com/smp/soundtouchandroid/: MediaCodecAudioDecoder.java  SoundStreamAudioPlayer.java  SoundStreamRunnable.java  SoundTouch.java
soundtouch/src/test/java/kw/learn/soundtouch/: ExampleUnitTest.java
